--- a/clicktocal/app/views/register_numbers/new.html.erb
+++ b/clicktocal/app/views/register_numbers/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New register_number</h1>
+<h1><%=t('new_register')%></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', register_numbers_path %>
+<%= link_to t('back'), register_numbers_path %>
