--- a/clicktocal/app/views/register_numbers/edit.html.erb
+++ b/clicktocal/app/views/register_numbers/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing register_number</h1>
+<h1><%=t('edit_register')%></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @register_number %> |
-<%= link_to 'Back', register_numbers_path %>
+<%= link_to t('show'), @register_number %> |
+<%= link_to t('back'), register_numbers_path %>
