--- a/clicktocal/app/views/register_numbers/_form.html.erb
+++ b/clicktocal/app/views/register_numbers/_form.html.erb
@@ -15,7 +15,7 @@
       <%= f.input :ip, input_html:{ readonly: true, style: 'width: 100px' }  %>
     </div>
     <div class="field">
-      <%= f.input :ddd, collection: @register_number.array_DDD %>
+      <%= f.input :ddd, collection: @register_number.arrayDDD %>
     </div>
     <div class="field">
       <%= f.label :number %>
