--- a/clicktocal/app/views/register_numbers/_form.html.erb
+++ b/clicktocal/app/views/register_numbers/_form.html.erb
@@ -1,54 +1,69 @@
-<%= simple_form_for(@register_number) do |f| %>
-    <% if @register_number.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(@register_number.errors.count, "error") %> prohibited this register_number from being saved:</h2>
+<div id="pop" xmlns="http://www.w3.org/1999/html">
+  <%= simple_form_for(@register_number) do |f| %>
+      <% if @register_number.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@register_number.errors.count, "error") %> prohibited this register_number from being
+              saved:</h2>
 
-          <ul>
-            <% @register_number.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-            <% end %>
-          </ul>
-        </div>
-    <% end %>
+            <ul>
+              <% @register_number.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
+      <% end %>
 
-    <div class="field">
-    <%=  f.hidden_field :carried_out,value: false, input_html:{readonly: true}%>
-    <div class="field">
-      <%= f.input :ip, input_html:{ readonly: true, style: 'width: 100px',type: 'hidden' }  %>
-    </div>
-    <div class="field">
-      <%= f.input :ddd, collection: @register_number.arrayDDD %>
-    </div>
-    <div class="field">
-      <%= f.label :number %>
-      <%= f.text_field :number %>
-    </div>
-    <div class="field">
+      <div class="field">
+        <%= f.hidden_field :carried_out, value: false, input_html: {readonly: true} %>
+      </div>
 
-    </div>
-    <div class="actions">
-      <%= f.submit %>
-    </div>
-<% end %>
+      <div class="field">
+        <%= f.input :ip, input_html: {readonly: true, style: 'width: 100px', type: 'hidden'} %>
+      </div>
 
-<script type="text/javascript">
-  var ip = myIP();
-  $('#register_number_ip').val(ip.replace(' ',''));
+      <div class="field">
+        <%= f.input :ddd, collection: @register_number.arrayDDD %>
+      </div>
 
-   function myIP() {
-       if (window.XMLHttpRequest) xmlhttp = new XMLHttpRequest();
-       else xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
+      <div class="field">
+        <%= f.label :number %>
+        <%= f.text_field :number %>
+      </div>
 
-       xmlhttp.open("GET","http://api.hostip.info/get_html.php",false);
-       xmlhttp.send();
+      <div class="actions">
+        <%= f.submit %>
+      </div>
+  <% end %>
 
-       hostipInfo = xmlhttp.responseText.split("\n");
 
-       for (i=0; hostipInfo.length >= i; i++) {
-           ipAddress = hostipInfo[i].split(":");
-           if ( ipAddress[0] == "IP" ) return ipAddress[1];
-       }
 
-       return false;
-   }
-</script>
+
+  <script type="text/javascript">
+      function pop(){
+        window.open('', '')
+
+  </script>
+
+
+  <script type="text/javascript">
+      var ip = myIP();
+      $('#register_number_ip').val(ip.replace(' ', ''));
+
+      function myIP() {
+          if (window.XMLHttpRequest) xmlhttp = new XMLHttpRequest();
+          else xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
+
+          xmlhttp.open("GET", "http://api.hostip.info/get_html.php", false);
+          xmlhttp.send();
+
+          hostipInfo = xmlhttp.responseText.split("\n");
+
+          for (i = 0; hostipInfo.length >= i; i++) {
+              ipAddress = hostipInfo[i].split(":");
+              if (ipAddress[0] == "IP") return ipAddress[1];
+          }
+
+          return false;
+      }
+  </script>
+</div>
