--- a/clicktocal/app/views/register_numbers/index.html.erb
+++ b/clicktocal/app/views/register_numbers/index.html.erb
@@ -1,4 +1,5 @@
 
 
-
-<%= link_to 'Cadastro',new_register_number_path,:onclick=>"NovaJanela(this.href,'nomeJanela','450','450','yes');return false;"%>
+<div class="field">
+<h3><%= link_to 'executar ligação',new_register_number_path,:onclick=>"NovaJanela(this.href,'nomeJanela','450','450','yes');return false;"%></h3>
+</div>
