--- a/clicktocal/app/views/layouts/application.html.erb
+++ b/clicktocal/app/views/layouts/application.html.erb
@@ -38,14 +38,14 @@
   </head>
   <body>
 
-    <div class="navbar navbar-default navbar-static-top">
+        <div id="bar" class="navbar navbar-default navbar-static-top">
       <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+        <button type="button" class="navbar-toggle"data-toggle="collapse" data-target=".navbar-responsive-collapse">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Clicktocal</a>
+       <h3> <a class="navbar-brand" href="#">Clicktocal</a></h3>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
 
