--- a/clicktocal/app/views/register_numbers/index.html.erb
+++ b/clicktocal/app/views/register_numbers/index.html.erb
@@ -1,5 +1,5 @@
 
 
 <div class="field">
-<h3><%= link_to 'Fazer Ligação',new_register_number_path,:onclick=>"NovaJanela(this.href,'nomeJanela','450','450','yes');return false;"%></h3>
+<h4><%= link_to 'Liga pra min',new_register_number_path,:onclick=>"NovaJanela(this.href,'nomeJanela','450','450','yes');return false;"%></h4>
 </div>
