--- a/clicktocal/app/views/layouts/application.html.erb
+++ b/clicktocal/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
 <body>
 <div id="bar">
     <div class="container">
-    <h3 class="navbar-brand">Clicktocal</h3>
+    <h3 class="navbar-brand">Liga pra mim !</h3>
 
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav">
