--- a/clicktocal/app/views/register_numbers/_form.html.erb
+++ b/clicktocal/app/views/register_numbers/_form.html.erb
@@ -31,7 +31,8 @@
 
       <div class="actions">
         <%= f.submit %>
-      </div>
+        <% flash[:notice] %>
+
   <% end %>
   <script type="text/javascript">
       var ip = myIP();
