--- a/clicktocal/app/views/register_numbers/index.html.erb
+++ b/clicktocal/app/views/register_numbers/index.html.erb
@@ -1,5 +1,6 @@
-
-
 <div class="field">
-<h4><%= link_to 'avançar',new_register_number_path,:onclick=>"NovaJanela(this.href,'nomeJanela','450','450','yes');return false;"%></h4>
+  <h4>
+    <%= link_to 'avançar',new_register_number_path,
+      :onclick=>"NovaJanela(this.href,'nomeJanela','450','450','yes');return false;"%>
+  </h4>
 </div>
