--- a/clicktocal/app/assets/stylesheets/application.css
+++ b/clicktocal/app/assets/stylesheets/application.css
@@ -6,3 +6,216 @@
 
  */
 
+<style>
+
+@font-face {
+
+    font-family: 'Rubrik';
+
+    src: url('http://telgo.com.br/wp-content/themes/on_telgo/fonts/Rubrik.eot');
+
+    src: url('http://telgo.com.br/wp-content/themes/on_telgo/fonts/Rubrik.eot') format('embedded-opentype'),
+
+         url('http://telgo.com.br/wp-content/themes/on_telgo/fonts/Rubrik.woff') format('woff'),
+
+         url('http://telgo.com.br/wp-content/themes/on_telgo/fonts/Rubrik.ttf') format('truetype'),
+
+         url('http://telgo.com.br/wp-content/themes/on_telgo/fonts/Rubrik.svg#OmnesRegular') format('svg');
+
+}
+
+
+
+form {
+
+	margin-top: -40px;
+
+}
+
+
+
+input[type=text],
+
+input[type=number],
+
+input[type=email],
+
+select,
+
+input[type=password] {
+
+	font-family: 'Rubrik',sans-serif;
+
+	padding: 10px 16px;
+
+    border: 2px solid #eee;
+
+    border-radius: 10px;
+
+    color: #333E4A;
+
+    margin: 7px 0;
+
+    width: 100%;
+
+    -webkit-transition: all 0.3s;
+
+	-moz-transition: all 0.3s;
+
+	-ms-transition: all 0.3s;
+
+	-o-transition: all 0.3s;
+
+	transition: all 0.3s;
+
+}
+
+
+
+select {
+
+	background-image: url('http://telgo.com.br/wp-content/themes/on_telgo/img/arrow.png');
+
+	background-repeat: no-repeat;
+
+	background-position: 95% center;
+
+	background-size: 15px;
+
+	-webkit-appearance: none;
+
+    -moz-appearance: none;
+
+    -o-appearance: none;
+
+    -ms-appearance: none;
+
+    appearance: none;
+
+}
+
+
+
+input[type=text]:focus,
+
+input[type=number]:focus,
+
+input[type=email]:focus,
+
+input[type=password]:focus,
+
+select:focus {
+
+	outline: none;
+
+	border-color: #6EC4EE;
+
+}
+
+
+
+input[type=submit] {
+
+    -webkit-appearance: button;
+
+    cursor: pointer;
+
+    border-radius: 50px;
+
+    padding: 12px 15px;
+
+    font-family: 'Rubrik', sans-serif;
+
+    margin: 0;
+
+    font-size: 14px;
+
+    float: left;
+
+    border: 2px solid #6EC4EE;
+
+    color: #6EC4EE;
+
+    width: auto;
+
+    background-color: #fff;
+
+    text-transform: uppercase;
+
+    -webkit-transition: all 0.5s;
+
+    -o-transition: all 0.5s;
+
+    -ms-transition: all 0.5s;
+
+    -moz-transition: all 0.5s;
+
+    transition: all 0.5s;
+
+}
+
+
+
+input[type=submit]:hover, input[type=submit]:focus {
+
+    color: #FFF;
+
+    background-color: #6EC4EE;
+
+    outline: none;
+
+}
+
+
+
+h3 {
+
+	font-family: 'Rubrik',sans-serif;
+
+	text-align: center;
+
+}
+
+
+
+.navbar-brand {
+
+    float: inherit;
+
+    font-size: 24px;
+
+    line-height: 28px;
+
+    height: auto;
+
+    font-weight: bold;
+
+    color: #6EC4EE;
+
+    margin: 0 0 15px;
+
+}
+
+
+
+#bar {
+
+    background-color: #FFF;
+
+}
+
+
+
+label {
+
+    color: #6EC4EE;
+
+    margin-bottom: 15px;
+
+    font-size: 16px;
+
+}
+
+
+
+</style>
