Adiciona captcha no cadastro

--- a/clicktocal/app/views/layouts/application.html.erb
+++ b/clicktocal/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" http-equiv="X-Frame-Options" content="allow">
+    <script src='https://www.google.com/recaptcha/api.js?hl=pt-BR'></script>
     <title><%= content_for?(:title) ? yield(:title) : "Clicktocal" %></title>
     <%= csrf_meta_tags %>
 
